conformance/tests/httproute-external-auth-http-forward-body.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-auth-http-forward-body
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /http/allowed/forward-body
    filters:
    - type: ExternalAuth
      externalAuth:
        protocol: HTTP
        backendRef:
          name: external-auth-http
          port: 9002
        forwardBody:
          maxSize: 100
        http:
          allowedResponseHeaders:
          - X-Auth-Received-Body-Size
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: Exact
        value: /http/allowed/forward-body-zero
    - path:
        type: Exact
        value: /http/denied/forward-body-zero
    filters:
    - type: ExternalAuth
      externalAuth:
        protocol: HTTP
        backendRef:
          name: external-auth-http
          port: 9002
        forwardBody:
          maxSize: 0
        http:
          allowedResponseHeaders:
          - X-Auth-Received-Body-Size
    backendRefs:
    - name: infra-backend-v1
      port: 8080
